--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
+    "installCommand": "npm install",
     "buildCommand": "npm run build",
-    "outputDirectory": "build",
+    "outputDirectory": "dist",
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/"
+            "destination": "/index.html"
         }
     ]
 }
